# Night

./: .gitignore  .gn  BUILD.gn  LICENSE  README.md  bitbucket-pipelines.yml  meson.build  meson_options.txt
.github/workflows/: c-cpp.yml
arch/x86-32/: BUILD.gn  link.ld  meson.build
arch/x86-32/include/arch/: arch.h  console.h  gdt.h  idt.h  pic_8259.h  uart.h
arch/x86-32/src/: arch.c  boot.asm  gdt.c  idt.c  isr.c  isrs.asm  pic_8259.c  uart.c
arch/x86-64/: BUILD.gn  link.ld  meson.build
arch/x86-64/include/arch/: arch.h  bootboot.h  console.h  gdt.h  handover.h  idt.h  incbin.h  multiboot.h  stivale.h  uart.h
arch/x86-64/src/: arch.c  boot.asm  boot.c  console.c  early.asm  font.asm  gdt.c  idt.c  isrs.asm
docs/: BUILDING.md  RUNNING.md
extra/: grub.cfg  limine.cfg
kernel/: BUILD.gn
kernel/include/: kernel.h
kernel/include/drivers/: tty.h
kernel/include/drivers/display/: legcon.h  vbe.h
kernel/include/kernel/: logger.h  qemu.h
kernel/src/drivers/: tty.c
kernel/src/drivers/display/: font.h  legcon.c  vbe.c
kernel/src/kernel/: kernel.c  logger.c  qemu.c
lib/include/libk/: memory.h  stdarg.h  string.h  types.h
lib/libk/: BUILD.gn  meson.build
lib/libk/src/: memory.c  string.c
scripts/: ci.sh  create-image.sh  create-iso.sh
