static_library("libarch") {
  sources = [
    "src/arch.c",
    "src/boot.asm",
    "src/gdt.c",
    "src/idt.c",
    "src/isr.c",
    "src/isrs.asm",
    "src/uart.c",
    "src/pic_8259.c",
  ]
  configs = ["//build/configs:lib"]
  include_dirs = ["//lib/include", "//kernel/include", "./include"]
}